removed overflow-x hidden due to preventing the sticky nav bar from following scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 body {
     width: 100vw;
     line-height: 1.7;
-    overflow-x: hidden;
     height: 100%;
 }
 
